--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Repair Buddy"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GXOYZzx5YsPX5jtYVIOFL3JYglsdp6POXcxZMScIMs4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
